--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     ports:
       - 3001:3001
     environment:
-      - DATABASE_URL=postgres://docker:docker@pet-api-postgres:5432/pet-api?schema=public
+      - DATABASE_URL=postgresql://docker:docker@pet-api-postgres:5432/pet-api?schema=public
     volumes:
       - ./:/app
     depends_on:
